Bug tracker at http://code.google.com/p/psutil/issues

0.4.1 - XXXX-XX-XX
------------------

NEW FEATURES

 * 229: get users currently connected on the system (psutil.get_users()).

BUGFIXES

 * 228: some example scripts were not working with python 3.
 * 230: (Windows / OSX) memory leak in Process.get_connections().
 * 232: Different output between psutil and "free" command


0.4.0 - 2011-10-29
------------------

NEW FEATURES

 * Issue 150: network I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 154: (FreeBSD) add support for process getcwd()
 * Issue 157: (Windows) provide installer for Python 3.2 64-bit.
 * Issue 198: Process.wait(timeout=0) can now be used to make wait() return
   immediately.
 * Issue 206: disk I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 213: examples/iotop.py script.
 * Issue 217: Process.get_connections() now has a "kind" argument to filter
   for connections with different criteria.
 * Issue 221: (FreeBSD) Process.get_open_files has been rewritten in C and no
   longer relies on lsof.
 * Issue 223: examples/top.py script.
 * Issue 227: examples/nettop.py script.

BUGFIXES

 * Issue 135: (OS X) psutil cannot create Process object
 * Issue 144: (Linux) no longer support 0 special PID.
 * Issue 188: (Linux) psutil import error on Linux ARM architectures.
 * Issue 194: (POSIX) psutil.Process.get_cpu_percent() now reports a percentage
   over 100 on multicore processors.
 * Issue 197: (Linux) Process.get_connections() is broken on platforms not
   supporting IPv6.
 * Issue 200: (Linux) psutil.NUM_CPUS not working on armel and sparc
   architectures and causing crash on module import.
 * Issue 201: (Linux) Process.get_connections() is broken on big-endian
   architectures.
 * Issue 211: Process instance can unexpectedly raise NoSuchProcess if tested
   for equality with another object.
 * Issue 218: (Linux) crash at import time on Debian 64-bit because of a missing
   line in /proc/meminfo.